# AlgoLab

./: .gitignore  CONTRIBUTING.md  GUIDE_UTILISATION.md  README.md  algolab.spec  pyproject.toml
.github/workflows/: build-release.yml
examples/: fonctions.algo
scripts/: ast_viewer.py  build_deb.sh
src/algolab/: environment.py  errors.py  main.py  utils.py
tests/: test_errors.py
vscode-extension/: README.md  algolab-vscode-0.1.0.vsix  extension.js  language-configuration.json  package.json
vscode-extension/snippets/: algolab.code-snippets
vscode-extension/syntaxes/: algolab.tmLanguage.json
